# adamant-armadillo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
libs/adamant-armadillo-core/: .readthedocs.yaml  pyproject.toml
libs/adamant-armadillo-core/docs/: Makefile  conf.py  index.rst
libs/adamant-armadillo-core/src/adamant_armadillo_core/: __init__.py
libs/adamant-armadillo-core/test/: test_get_noon_on_same_day.py
libs/adamant-armadillo-domain/: pyproject.toml
libs/adamant-armadillo-domain/docs/: Makefile  conf.py  index.rst
libs/adamant-armadillo-domain/src/adamant_armadillo_domain/: __init__.py  day_of_week.py
libs/adamant-armadillo-domain/test/: test_day_of_week.py
