[project]
name = "adamant-armadillo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/adamant-armadillo-core",
    "libs/adamant-armadillo-domain",
]

[tool.black]
line-length = 120
target-version = ["py314"]