[project]
name = "adamant-armadillo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/adamant-armadillo-core",
    "libs/adamant-armadillo-domain",
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.mypy]
python_version = 3.14
warn_unused_configs = true
show_error_context = true
pretty = true
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = [
    "libs/adamant-armadillo-core/src/**/*.py",
    "libs/adamant-armadillo-core/test/**/*.py",
    "libs/adamant-armadillo-domain/src/**/*.py",
    "libs/adamant-armadillo-domain/test/**/*.py",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py314"
src = [
    "libs/common-lib/src",
    "libs/common-lib/test",
    "libs/domain-lib/src",
    "libs/domain-lib/test",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]
ignore = [
    "D203",
    "D213",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["D100",]
"libs/**/docs/**" = ["D100",]
"libs/**/test/**" = ["D100", "D103",]

[tool.ruff.lint.isort]
known-first-party = [
    "adamant_armadillo_core",
    "adamant_armadillo_domain",
]