[project]
name = "adamant-armadillo-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Carter", email = "adam.clayton.carter@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "adamant-armadillo-core",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.uv.sources]
adamant-armadillo-core = { workspace = true }
